# pm

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md
backend/: AGENTS.md  pyproject.toml
backend/app/: ai.py  ai_chat.py  db.py  main.py
backend/tests/: test_ai_chat.py  test_ai_smoke.py  test_auth.py  test_board_api.py
docs/: DB_SCHEMA.md  PLAN.md  code_review.md
frontend/: AGENTS.md  package-lock.json  package.json
frontend/src/components/: KanbanBoard.test.tsx  KanbanBoard.tsx  KanbanColumn.tsx
scripts/: AGENTS.md  start-mac.sh  start-windows.ps1  stop-linux.sh  stop-windows.ps1
