[project]
name = "pm-backend"
version = "0.1.0"
description = "FastAPI backend for the PM MVP"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn>=0.35.0,<1.0.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
  "httpx>=0.28.0,<1.0.0",
  "pytest>=8.4.0,<9.0.0",
]
